--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Git and GitHub</h1>
-    <p>Git</p>
+    <p>it</p>
+    <br />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+      voluptate ullam culpa aspernatur veritatis accusamus in. Cupiditate amet
+      fugit iusto fuga odit! Mollitia dolorem dolorum dignissimos fugiat,
+      repudiandae eligendi odit!
+    </p>
   </body>
 </html>
