Edited secret recipe

--- a/secret_recipe.html
+++ b/secret_recipe.html
@@ -21,6 +21,9 @@
       <li>Boil water</li>
       <li>Add salt and pepper</li>
       <li>Add sugar and milk</li>
+      <li>Stir until combined</li>
+      <li>Add chocolate</li>
+      <li>Serve immediately</li>
     </ol>
   </body>
 </html>
