--- a/secret_recipe.html
+++ b/secret_recipe.html
@@ -24,6 +24,7 @@
       <li>Stir until combined</li>
       <li>Add chocolate</li>
       <li>Serve immediately</li>
+      <li>Enjoy</li>
     </ol>
   </body>
 </html>
